--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -6,7 +6,7 @@
 }
 
 html, body{
-    height: 120%;
+    height: 100%;
     width: 100%;
 }
 
@@ -58,3 +58,42 @@ footer{
     margin-left: 50%;
     top: 150px
 }
+
+.sign {
+    width: 100%;
+    height: 40%;
+    background-color: #799A4D;
+    color: white;
+    position: absolute;
+    display: flex;
+    font-size: 125%;
+}
+
+.formulaire {
+    width: 40%;
+    height: 100%;
+    background-color: rgba(15, 107, 37, 0.272);
+    margin-top: 24%;    
+    margin-left: 30%;
+    text-align: center;
+}
+
+.form-control {
+    display: inline;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    appearance: none;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+/* .createAccount {
+    margin-top: 100px;
+} */
