--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -18,12 +18,12 @@ p {
 header {
     width: 100%;
     height: 40%;
-    background-color: #799A4D;
     color: white;
     text-align: center;
     position: absolute;
     display: flex;
     z-index: 1;
+    background: linear-gradient(rgb(36, 154, 36), 70%, rgb(64, 64, 197));
 }
 
 footer{
@@ -36,7 +36,7 @@ footer{
     align-items: center;
     position: fixed;
     color: white;
-    background-color: #799A4D;
+    background-color: #42aa35;
     border-top: 0.1px solid #799A4D;
 }
 
@@ -44,7 +44,7 @@ footer{
     z-index: 2;
     position : relative;
     left: 15%;
-    top: 15%;
+    top: 20%;
 }
 
 .imgEasy {
@@ -67,13 +67,14 @@ footer{
     position: absolute;
     display: flex;
     font-size: 125%;
+    top:0px
 }
 
 .formulaire {
     width: 40%;
-    height: 100%;
-    background-color: rgba(15, 107, 37, 0.272);
-    margin-top: 24%;    
+    height: 350px;
+    background-color: #86ae55;    
+    margin-top: 20%;    
     margin-left: 30%;
     text-align: center;
 }
@@ -103,20 +104,13 @@ footer{
     display: flex;
     font-size: 125%;
 }
-
-/* .loginBody {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin-top: 20%
-} */
     
 .loginBody {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-top: 20%;
-    margin-left: 32%;
+    margin-top:-30%;
+    margin-left: 55%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -126,10 +120,6 @@ footer{
     width: 30%;
     height: 400px;
 }
-
-/* .inputLogin {
-    margin-top: 10%;
-} */
 
 .loginForgetMdpDiv {
     display: flex;
@@ -142,4 +132,24 @@ footer{
 .label{
     color: hsla(241, 96%, 47%, 0.925);
     font-size: 14px;
+}
+
+.img_assistante-medicale {
+    margin-top: 22%;
+    margin-left: 5%;
+    display: flex;
+}
+
+.loginFooter  {
+    width: 100%;
+    height: 60px;
+    font-size: 80%;
+    bottom:0%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+    color: white;
+    background-color: rgb(64, 64, 197);
+    border-top: 0.1px solid #4452ebd1;
 }
