--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -72,10 +72,20 @@ footer{
 
 .formulaire {
     width: 40%;
-    height: 350px;
+    height: 300px;
     background-color: #86ae55;    
     margin-top: 20%;    
     margin-left: 30%;
+    text-align: center;
+   position: center
+}
+
+.Input {
+    margin-top: 20%;
+    text-align: center;
+}
+
+.sign_up {
     text-align: center;
 }
 
