--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -169,3 +169,59 @@ footer{
     text-align: center;
     font-size: 15px;
 }
+
+.headerPassforgotten {
+    width: 100%;
+    height: 30%;
+    color: white;
+    position: absolute;
+    display: flex;
+    background: #ecf0f1;
+}
+
+.passwd {
+    text-align: center;
+}
+
+.passforgottenfooter {
+        width: 100%;
+    height: 60px;
+    font-size: 80%;
+    bottom:0%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+    color: white;
+    background-color: rgb(64, 64, 197);
+    border-top: 0.1px solid #4452ebd1;
+}
+
+.reset {
+    display: flex;
+    align-items: center;
+    margin-top:1%;
+    margin-left: 5%; 
+    align-items: center;
+    justify-content: space-around;
+    background:  #f7f9f9 ;
+    border: 2px solid #dccc25;
+    width: 90%;
+    height: 500px;
+}
+
+.information {
+    width: 95%;
+    height: 100px;
+    background:  #f1dddd ;
+    border: 1px solid red;
+    margin-top: -28%;
+    margin-left: -38%;
+    text-align: center;
+}
+
+.resetpwd{
+    text-align: center;
+    margin-top: 10%;
+    margin-left: -140%;
+}
