--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -184,7 +184,7 @@ footer{
 }
 
 .passforgottenfooter {
-        width: 100%;
+    width: 100%;
     height: 60px;
     font-size: 80%;
     bottom:0%;
@@ -224,4 +224,33 @@ footer{
     text-align: center;
     margin-top: 10%;
     margin-left: -140%;
+}
+
+.headerPrincipal {
+    width: 100%;
+    height: 20%;
+    color: white;
+    position: absolute;
+    display: flex;
+    box-sizing: border-box;
+    background: #f4f8f9cc; 
+}
+
+.userpicture {
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+.infos {
+    align-items: center;
+    justify-content: space-around;
+    margin-top:10%;
+    margin-left:40%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: #f4f8f9cc;
+    border: 1px solid rgb(64, 64, 197);
+    width: 55%;
+    height: 350px;
 }
