--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -1,3 +1,6 @@
+@import '~react-agenda/build/styles.css';
+@import '~react-datetime/css/react-datetime.css';
+
 *{
     margin: 0;
     padding: 0;
@@ -44,7 +47,6 @@ footer{
     z-index: 2;
     position : relative;
     left: 15%;
-  
 }
 
 .imgEasy {
@@ -232,8 +234,6 @@ footer{
     color: white;
     position: absolute;
     display: flex;
-    box-sizing: border-box;
-    background: #f4f8f9cc; 
 }
 
 .userpicture {
@@ -241,16 +241,95 @@ footer{
     vertical-align: middle;
 }
 
-.infos {
+.menu-bar {
+    display: flex;
     align-items: center;
-    justify-content: space-around;
-    margin-top:10%;
-    margin-left:40%;
-    flex-direction: column;
+    margin-top: 8%;
+    cursor: pointer;
+}
+  
+.menu-bar svg {
+    margin-right: 10px;
+    font-size: 15px;
+    cursor: pointer;
+}
+  
+.menu-items {
+    list-style: none;
+    padding: 0;
+}
+  
+.menu-items li {
+    display: flex;
     align-items: center;
-    justify-content: space-around;
-    background: #f4f8f9cc;
-    border: 1px solid rgb(64, 64, 197);
-    width: 55%;
-    height: 350px;
+    padding: 10px;
+    margin: 25px;
+    border-bottom: 1px solid #ddd;
+}
+  
+.menu-items li:last-child {
+    border-bottom: none;
+}
+  
+.menu-items li:hover {
+    background-color: #ddd;
+}
+  
+.menu-items li svg {
+    margin-right: 10px;
+    font-size: 15px;
+}
+
+.container {
+    width: 25%;
+    margin-top: -48%;
+    margin-left: 73%;
+}
+  
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #f0f0f0;
+    padding: 10px;
+    width: 54%;
+    margin-left: 17.5%;
+    margin-top: -25%;
+  }
+  
+.menu-bar-horizontal {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+  
+.menu-bar-horizontal li {
+    margin-right: 20px;
+}
+  
+.menu-bar-horizontal a {
+    display: flex;
+    align-items: center;
+    color: #333;
+    text-decoration: none;
+}
+  
+.menu-bar-horizontal a:hover {
+    color: #666;
+}
+  
+.menu-bar-horizontal a svg {
+    margin-right: 10px;
+}
+  
+.menu-bar-title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.agenda {
+    width: 73%;
+    margin-left: 10%;
+    margin-top: 3%;
 }
