--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -630,3 +630,43 @@ button[type="submit"]:hover {
     background: #3A6898;
     border-radius: 30px;
 } */
+
+.tcadre {
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    left: 0px;
+    top: 0px;
+    background: rgba(244, 247, 252, 0.75);
+    backdrop-filter: blur(4px);
+}
+
+.searchBar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+    position: absolute;
+    width: 559px;
+    height: 32px;
+    left: 82px;
+    top: 3%;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 0px 0px 1px rgba(104, 113, 130, 0.16);
+}
+
+/* .tableau {
+    border-collapse: collapse;
+    min-width: 400px;
+    width: auto;
+    box-shadow: 0 5px 50px rgba(0,0,0,0.15);
+    margin: 100px auto;
+    cursor: pointer;
+    border: 1px solid #add;
+}
+
+thead tr {
+  background-color: midnightblue;
+  color: #fff;
+  text-align: center;
+} */
