Calendrier pour les consultations intialisés avec l'API + possibilité de modifier ou supprimer un RDV/Date Picker pour l'intervalle de date prenant automatiquement des valeurs

--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -252,9 +252,9 @@ footer{
     border-bottom: 1px solid #ddd;
 }
   
-.menu-items li:last-child {
+/* .menu-items li:last-child {
     border-bottom: none;
-}
+} */
   
 .menu-items li:hover {
     background-color: #ddd;
