--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -608,6 +608,21 @@ button[type="submit"]:hover {
     border-radius: 30px;
 }
 
+.btn4{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 161px;
+    position: absolute;
+    width: 15%;
+    height: 8%;
+    margin-left: 51%;
+    margin-top: 20%;
+    background: #719458;
+    border-radius: 30px;
+
+}
+
 .titleDataPage {
     position: absolute;
     left: 35%;
