--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -161,7 +161,7 @@ footer{
 }
 
 .aboutUs{
-    text-align: center;
+    /* text-align: center; */
     margin-top: 12%;
 }
 
@@ -347,16 +347,6 @@ nav {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 1px rgba(70, 79, 96, 0.16), 0px 2px 5px rgba(89, 96, 120, 0.1);
     border-radius: 6px;
 }
-
-/* .tr-td {
-    background-color: midnightblue;
-    color: #fff;
-    text-align: center;
-}
-
-.tr-td:nth-child(even){
-    background-color: #f3f3f3;
-  } */
 
 .profil {
     position: fixed;
