--- a/web-front/src/css/main.css
+++ b/web-front/src/css/main.css
@@ -479,7 +479,7 @@ button[type="submit"]:hover {
 
 .Pprofil {
     margin-left: 25%;
-    margin-top: 7%;
+    margin-top: 12%;
 }
   
 .profile-picture img {
@@ -491,6 +491,8 @@ button[type="submit"]:hover {
 .profile-details {
     display: flex;
     flex-direction: column;
+    width: 40%;
+    height: 200px;
 }
   
 .profile-details p {
@@ -586,7 +588,7 @@ button[type="submit"]:hover {
     width: 10%;
     height: 8%;
     margin-left: 28%;
-    margin-top: 6%;
+    margin-top: 2%;
     background: #3A6898;
     border-radius: 30px;
 }
@@ -600,7 +602,7 @@ button[type="submit"]:hover {
     width: 15%;
     height: 8%;
     margin-left: 51%;
-    margin-top: 6%;
+    margin-top: 2%;
     background: #719458;
     border-radius: 30px;
 }
@@ -614,7 +616,7 @@ button[type="submit"]:hover {
     width: 18%;
     height: 8%;
     margin-left: 77%;
-    margin-top: 6%;
+    margin-top: 2%;
     background: #3A6898;
     border-radius: 30px;
 }
